# MatPrograming

./: .gitignore
lab1/: CMakeLists.txt
lab1/Abstract-solver/include/: AbstractSolver.h
lab1/AbstractSolver/include/: AbstractSolver.h
lab1/Function/: CMakeLists.txt
lab1/Function/include/: Function.h  OneDimensionalFunction.h
lab1/Matrix/: CMakeLists.txt
lab1/Matrix-abstract-solver/include/: MatrixAbstractSolver.h
lab1/Matrix-determinant-solver/: CMakeLists.txt
lab1/Matrix-determinant-solver/include/: MatrixDeterminantSolver.h
lab1/Matrix-determinant-solver/src/: MatrixDeterminantSolver.cpp
lab1/Matrix-inverse-solver/include/: MatrixInverseSolver.h
lab1/Matrix-inverse-solver/src/: MatrixInverseSolver.cpp
lab1/Matrix-sylvester-test/: CMakeLists.txt
lab1/Matrix-sylvester-test/include/: MatrixSylvesterTest.h
lab1/Matrix-sylvester-test/src/: MatrixSylvesterTest.cpp
lab1/Matrix/include/: Matrix.h
lab1/Matrix/src/: source.cpp
lab1/NR/include/: NR.h
lab1/NR/src/: NR.cpp
lab1/Point/: CMakeLists.txt
lab1/Point/include/: Point.h
lab1/Point/src/: Point.cpp
lab1/Simple-polinom/: CMakeLists.txt
lab1/Simple-polinom/include/: SimplePolinom.h
lab1/Simple-polinom/src/: SimplePolinom.cpp
lab1/Simple-polynomial-real-roots-boundaries-solver/include/: SimplePolynomialRealRootsBoundariesSolver.h
lab1/Simple-polynomial-real-roots-boundaries-solver/src/: SimplePolynomialRealRootsBoundariesSolver.cpp
lab1/Simple-polynomial/include/: SimplePolynomial.h
lab1/Simple-polynomial/src/: SimplePolynomial.cpp
lab1/Utils/: CMakeLists.txt
lab1/Utils/include/: Utils.h
lab1/Utils/src/: Utils.cpp
lab1/include/: Header.h  NR.h
lab1/src/: NR.cpp  main.cpp
